HDS1978 Prevent horizontal overflow in mobile menu

--- a/packages/react/src/components/header/components/headerActionBar/HeaderActionBarNavigationMenu.module.scss
+++ b/packages/react/src/components/header/components/headerActionBar/HeaderActionBarNavigationMenu.module.scss
@@ -42,6 +42,7 @@
 }
 
 .headerNavigationMenu {
+  overflow: hidden;
   position: absolute;
   transform: translateY(-100%) translateY(1px);
   transition: var(--animation-duration-dropwdown) transform var(--animation-close-delay-dropdown), var(--animation-duration-dropwdown) min-height calc(var(--animation-duration-dropwdown) + var(--animation-close-delay-dropdown));
